# idasenrs

./: AGENTS.md  Cargo.toml  README.md
.zed/: debug.json
src/: main.rs
