[package]
name = "idasenrs"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.11.8", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
directories = "5.0"
uuid = "1.6"
byteorder = "1.5"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
